@@ -5,13 +5,9 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-
-import java.util.Collections;
-import java.util.Set;
 
 @Configuration
 public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
@@ -21,24 +17,36 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
         return new BCryptPasswordEncoder();
     }
 
+    private final UserDetailsService userDetailsService;
+
+    public WebSecurityConfig(UserDetailsService userDetailsService) {
+        this.userDetailsService = userDetailsService;
+    }
+
     @Override
     protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-
-        User userAdmin = new User("Jan", getPasswordEncoder().encode("Jan123"), Set.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER")));
-
-        User userUser = new User("Karol", getPasswordEncoder().encode("Karol123"), Collections.singleton(new SimpleGrantedAuthority("ROLE_USER")));
-
-        auth.inMemoryAuthentication().withUser(userAdmin);
-        auth.inMemoryAuthentication().withUser(userUser);
+//
+//        User userAdmin = new User("Jan", getPasswordEncoder().encode("Jan123"), Set.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER")));
+//
+//        User userUser = new User("Karol", getPasswordEncoder().encode("Karol123"), Collections.singleton(new SimpleGrantedAuthority("ROLE_USER")));
+//
+//        auth.inMemoryAuthentication().withUser(userAdmin);
+//        auth.inMemoryAuthentication().withUser(userUser);
+        auth.userDetailsService(userDetailsService);
     }
 
     @Override
     protected void configure(HttpSecurity http) throws Exception {
+        http.csrf().disable();
         http.authorizeRequests()
-                .antMatchers("/forAdmin").hasRole("ADMIN")
-                .antMatchers("/forUser").hasRole("USER")
+                .mvcMatchers("/forAdmin").hasRole("ADMIN")
+//                .antMatchers("/forAdmin").hasRole("ADMIN")
+                .mvcMatchers("/forUser").hasRole("USER")
+//                .antMatchers("/forUser").hasRole("USER")
+                .mvcMatchers("/signup").permitAll()
+//                .antMatchers("/signup").permitAll()
                 .and()
-                .formLogin().permitAll()
+                .formLogin().loginPage("/login").defaultSuccessUrl("/forUser").permitAll()
                 .and()
                 .logout().logoutSuccessUrl("/forAll");
 
